# hoymilesClient

./: CMakeLists.txt  README.md
inc/: hoymiles.h  modbus.h
inc/hoymiles/: dtu.h  microinverter.h  port.h  sunspec.h
inc/hoymiles/portParameters/: portParameters.h  portParametersGeneric.h
inc/hoymiles/sunspecParameters/: sunspecParameters.h  sunspecParametersGeneric.h
src/: hoymiles.cpp  main.cpp
src/hoymiles/: dtu.cpp  microinverter.cpp  port.cpp  sunspec.cpp
src/hoymiles/portParameters/: portParameters.cpp  portParametersGeneric.cpp
src/hoymiles/sunspecParameters/: sunspecParameters.cpp  sunspecParametersGeneric.cpp
src/libmodbus/: CMakeLists.txt
src/libmodbus/src/: modbus.c
